fix list expanded overflow

--- a/frontend/less/espo/custom.less
+++ b/frontend/less/espo/custom.less
@@ -1875,7 +1875,8 @@ h4.panel-title span.fas.color-icon {
     }
     .list.list-expanded {
         width: auto;
-        overflow-x: hidden;
+        overflow-x: unset;
+        overflow-y: unset;
     }
     .list > table {
         min-width: @screen-sm-min;
